src/test/deca/context/invalid/tests/EXPR-opcmp_wrong_type_operand.deca
// Description:
//    Affectation et typage
//
// Resultats:
//    Ligne 12: initialisation d'un attribut à une valeur de type incompatible.
// 
// Historique:
//    cree le 01/01/2022


class Test {
    int field;

}
{
    5 < true;
} 